--- a/빅데이터공모전/code/package.json
+++ b/빅데이터공모전/code/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csvtojson": "^2.0.8", 
-    "json-to-csv": "^1.0.0"
+    "csvtojson": "^2.0.8",
+    "json-to-csv": "^1.0.0",
+    "json2csv": "^4.5.1"
   }
 }
